cambios agregados profe

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p>Hola profe, este es mi sitio web
-        de momento no tengo dudas mas alla de lo obvio
+    <p>Hola profe,por fin 
+        pude hacer esto
+        
     </p>
 </body>
 </html>
